# whatsapp-agent

./: main.py  pyproject.toml
notebook/: langgraph.ipynb  wrokflow.ipynb
src/ai_companion/: cli.py  settings.py
src/ai_companion/core/: prompt.py
src/ai_companion/graph/: constants.py  edges.py  graph.py  nodes.py  states.py
src/ai_companion/graph/utils/: chains.py  helpers.py
src/ai_companion/interfaces/streamlit/: chat.py
src/ai_companion/interfaces/telegram/: server.py
src/ai_companion/modules/image/: __init__.py  image_to_text.py  text_to_image.py
src/ai_companion/modules/memory/long_term/: memory_manager.py  vector.py  vector_store.py
src/ai_companion/modules/speech/: __init__.py  speech_to_text.py  text_to_speech.py
